--- a/src/main/webapp/create/client/createClientTemplate.html
+++ b/src/main/webapp/create/client/createClientTemplate.html
@@ -1,16 +1,18 @@
 <html>
 <body>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <div class="title bg-primary">Cadastro de Cliente</div>
-    <div class="container tabsHeader">
-        <ul class="nav nav-tabs">
-            <li ng-class="{active: selected(1)}"><a href="" ng-click="selectTab(1)">Informações Gerais</a></li>
-            <li ng-class="{active: selected(2)}"><a href="" ng-click="selectTab(2)">Endereço</a></li>
-            <li ng-class="{active: selected(3)}"><a href="" ng-click="selectTab(3)">Contatos</a></li>
-            <li ng-class="{active: selected(4)}"><a href="" ng-click="selectTab(4)">Trabalho</a></li>
-        </ul>
-        <div class="panel panel-primary">
-            <div id="informacoes" class="register panel-body" ng-show="tab === 1">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <div class="title bg-primary col-md-12 col-sm-12">Cadastro de Cliente</div>
+    <div class="container col-md-12 col-sm-12">
+        <div>
+            <ul class="nav nav-tabs">
+                <li ng-class="{active: selected(1)} col-md-2 col-sm-2"><a href="" ng-click="selectTab(1)">Informações Gerais</a></li>
+                <li ng-class="{active: selected(2)} col-md-2 col-sm-2"><a href="" ng-click="selectTab(2)">Endereço</a></li>
+                <li ng-class="{active: selected(3)} col-md-2 col-sm-2"><a href="" ng-click="selectTab(3)">Contatos</a></li>
+                <li ng-class="{active: selected(4)} col-md-2 col-sm-2"><a href="" ng-click="selectTab(4)">Trabalho</a></li>
+            </ul>
+        </div>
+        <div class="panel panel-primary col-md-12 col-sm-12">
+            <div id="informacoes" class="register panel-body col-md-12 col-sm-12" ng-show="tab === 1">
                 <section ng-include="'./create/client/generalInformations.html'"></section>
             </div>
             <div id="endereco" class="register panel-body" ng-show="tab === 2">
