--- a/src/main/webapp/create/client/generalInformations.html
+++ b/src/main/webapp/create/client/generalInformations.html
@@ -1,30 +1,31 @@
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <form name="formInfo">
     <div class="row">
-        <div class="form-group col-md-8 col-sm-8">
+        <div class="form-group col-md-4 col-sm-4">
             <label for="inputNome">Nome</label>
             <input id="inputNome" name="inputNome" class="form-control" type="text" ng-model="person.name"/>
         </div>
-        <div class="form-group col-md-4 col-sm-4">
+        <div class="form-group col-md-2 col-sm-2">
             <label for="inputCPF">CPF</label>
             <input id="inputCPF" name="inputCPF" class="form-control" type="text" maxlength="11" placeholder="___.___.___-__" ng-model="person.cpf" required/>
         </div>
     </div>
     <div class="row">
-        <div class="form-group col-md-4 col-sm-4">
+        <div class="form-group col-md-4 col-sm-6">
             <label for="inputRG">RG</label>
             <input id="inputRG" name="inputRG" class="form-control" type="text" ng-model="person.rg"/>
         </div>
-        <div class="form-group col-md-8 col-sm-8">
-            <label for="inputOrgao">”rg„o Emissor</label>
+        <div class="form-group col-md-4 col-sm-6">
+            <label for="inputOrgao">√ìrg√£o Emissor</label>
             <input id="inputOrgao" name="inputOrgao" class="form-control" type="text" ng-model="person.issuingBody"/>
         </div>
     </div>
     <div class="row">
-        <div class="form-group col-md-4 col-sm-4">
+        <div class="form-group col-md-2 col-sm-4">
             <label for="inputData">Data de nascimento</label>
             <input id="inputData" name="inputData" class="form-control" type="text" ng-model="person.dateOfBirth"/>
         </div>
-        <div class="form-group col-md-4 col-sm-4">
+        <div class="form-group col-md-2 col-sm-4">
             <label for="inputCivil">Estado Civil</label>
             <input id="inputCivil" name="inputCivil" class="form-control" type="text" ng-model="person.maritalStatus"/>
         </div>
@@ -38,12 +39,12 @@
     </div>
     <hr/>
     <div class="row">
-        <div class="form-group col-md-6 col-sm-6">
+        <div class="form-group col-md-4 col-sm-4">
             <label for="inputNomePai">Nome do Pai</label>
             <input id="inputNomePai" name="inputNomePai" class="form-control" type="text" ng-model="person.fatherName"/>
         </div>
-        <div class="form-group col-md-6 col-sm-6">
-            <label for="inputNomeMae">Nome da M„e</label>
+        <div class="form-group col-md-4 col-sm-4">
+            <label for="inputNomeMae">Nome da M√£e</label>
             <input id="inputNomeMae" name="inputNomeMae" class="form-control" type="text" ng-model="person.motherName"/>
         </div>
     </div>
