--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -19,7 +19,7 @@
                 <ul class="nav navbar-nav">
                     <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Cadastrar <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#/create/client">Pessoa Física</a></li>
+                            <li><a href="#/create/client">Cliente</a></li>
                             <li style="padding-top: 10px;"><a href="#/create/vehicle">Veículo</a></li>
                             <li style="padding-top: 10px;"><a href="#/create/brand">Marca</a></li>
                             <li style="padding-top: 10px;"><a href="#/create/model">Modelo</a></li>
