Updating and removing files, adding masks
- Updating file/folder names
- Deleting files/folders
- Adding a new dependency (ngMask)
- Adding CPF and CEP masks

--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -19,10 +19,8 @@
                 <ul class="nav navbar-nav">
                     <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Cadastrar <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#/create/client">Cliente</a></li>
-                            <li style="padding-top: 10px;"><a href="#/create/vehicle">Veículo</a></li>
-                            <li style="padding-top: 10px;"><a href="#/create/brand">Marca</a></li>
-                            <li style="padding-top: 10px;"><a href="#/create/model">Modelo</a></li>
+                            <li><a href="#/register/client">Cliente</a></li>
+                            <li style="padding-top: 10px;"><a href="#/register/vehicle">Veículo</a></li>
                             <li role="separator" class="divider"></li>
                         </ul>
                     </li>
