--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,6 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="cache-control" content="no-cache">
 <link rel="icon" type="image/png" href="imagens/icones/icon.png" />
 <title>Projeto Carro</title>
 
@@ -20,15 +21,14 @@
 <!-- Outras dependencias -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src='bower_components/ngMask/dist/ngMask.min.js'></script>
 
 <!-- Módulos -->
 <script src="app.js"></script>
 
 <!-- Controllers -->
-<script src="create/client/CreateClientCtrl.js"></script>
-<script src="create/brand/CreateBrandCtrl.js"></script>
-<script src="create/model/CreateModelCtrl.js"></script>
-<script src="create/vehicle/CreateVehicleCtrl.js"></script>
+<script src="register/client/RegisterClientCtrl.js"></script>
+<script src="register/vehicle/RegisterVehicleCtrl.js"></script>
 
 </head>
 <body ng-app="system">
