--- a/src/main/webapp/register/client/generalInformations.html
+++ b/src/main/webapp/register/client/generalInformations.html
@@ -1,11 +1,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <form name="formInfo">
     <div class="row">
-        <div class="form-group col-md-4 col-sm-4">
-            <label for="inputName">Nome</label>
-            <input id="inputName" name="inputName" class="form-control" type="text" ng-model="client.name"/>
-        </div>
-        <div class="form-group col-md-2 col-sm-4">
+        <div class="form-group col-md-2 col-sm-2">
             <label for="inputCpf">CPF</label>
             <input id="inputCpf" name="inputCpf" class="form-control" type="text" ng-model="client.cpf" placeholder="___.___.___-__" mask="999.999.999-99" clean="true" required limit/>
         </div>
@@ -14,11 +10,15 @@
         </div>
     </div>
     <div class="row">
+        <div class="form-group col-md-4 col-sm-4">
+            <label for="inputName">Nome</label>
+            <input id="inputName" name="inputName" class="form-control" type="text" ng-model="client.name"/>
+        </div>
         <div class="form-group col-md-4 col-sm-6">
             <label for="inputRg">RG</label>
             <input id="inputRg" name="inputRg" class="form-control" type="text" ng-model="client.rg"/>
         </div>
-        <div class="form-group col-md-4 col-sm-6">
+        <div class="form-group col-md-2 col-sm-4">
             <label for="inputIssuingBody">Órgão Emissor</label>
             <input id="inputIssuingBody" name="inputIssuingBody" class="form-control" type="text" ng-model="client.issuingBody"/>
         </div>
@@ -26,21 +26,30 @@
     <div class="row">
         <div class="form-group col-md-2 col-sm-4">
             <label for="inputDateOfBirth">Data de nascimento</label>
-            <input id="inputDateOfBirth" name="inputDateOfBirth" class="form-control" type="text" ng-model="client.dateOfBirth"/>
+            <input id="inputDateOfBirth" name="inputDateOfBirth" class="form-control" type="text" ng-model="client.dateOfBirth" placeholder="__/__/____" mask="99/99/9999" clean="true" required limit/>
         </div>
-        <div class="form-group col-md-2 col-sm-4">
-            <label for="inputMaritalStatus">Estado Civil</label>
-            <input id="inputMaritalStatus" name="inputMaritalStatus" class="form-control" type="text" ng-model="client.maritalStatus"/>
-        </div>
-        <div class="form-group col-md-4 col-sm-4">
+        <div class="form-group col-md-2 col-sm-2">
             <label for="divGender">Sexo</label>
             <div name="divGender" class="radio">
                 <label><input type="radio" name="opcao" value="Masculino" ng-model="client.gender"/>Masculino</label>
                 <label><input type="radio" name="opcao" value="Feminino" ng-model="client.gender"/>Feminino</label>
             </div>
         </div>
+        <div class="form-group col-md-2 col-sm-4">
+            <label for="inputMaritalStatus">Estado Civil</label>
+            <input id="inputMaritalStatus" name="inputMaritalStatus" class="form-control" type="text" ng-model="client.maritalStatus"/>
+        </div>
+        <div class="form-group col-md-2 col-sm-4">
+            <label for="inputCityOfBirth">Naturalidade</label>
+            <input id="inputCityOfBirth" name="inputCityOfBirth" class="form-control" type="text" />
+        </div>
+        <div class="form-group col-md-1 col-sm-1">
+            <label for="inputStateOfBirth">UF</label>
+            <input id="inputStateOfBirth" name="inputStateOfBirth" class="form-control" type="text"/>
+        </div>
     </div>
-    <hr/>
+    <div class="row">
+    </div>
     <div class="row">
         <div class="form-group col-md-4 col-sm-4">
             <label for="inputFatherName">Nome do Pai</label>
