Fix for the register client form tabs
- The CSS class 'active' was fixed in order to focus on the selected tab
- The CSS class 'nav-justified' was added to adjust the tabs
- The CSS file was updated to centralize the li elements

--- a/src/main/webapp/register/client/registerClientTemplate.html
+++ b/src/main/webapp/register/client/registerClientTemplate.html
@@ -4,11 +4,11 @@
     <div class="title bg-primary col-md-12 col-sm-12">Cadastro de Cliente</div>
     <div class="container col-md-12 col-sm-12">
         <div>
-            <ul class="nav nav-tabs">
-                <li class="col-md-2 col-sm-2"><a href="" ng-click="selectTab(1)">Informações Gerais</a></li>
-                <li class="col-md-2 col-sm-2"><a href="" ng-click="selectTab(2)">Endereço</a></li>
-                <li class="col-md-2 col-sm-2"><a href="" ng-click="selectTab(3)">Contatos</a></li>
-                <li class="col-md-2 col-sm-2"><a href="" ng-click="selectTab(4)">Trabalho</a></li>
+            <ul class="nav nav-tabs nav-justified">
+                <li id="1" class="registerListTabs col-md-2 col-sm-2 active" style="padding: 0px" ><a href="" ng-click="selectTab(1)">Informações Gerais</a></li>
+                <li id="2" class="registerListTabs col-md-1 col-sm-1" style="padding: 0px" ><a href="" ng-click="selectTab(2)">Endereço</a></li>
+                <li id="3" class="registerListTabs col-md-1 col-sm-1" style="padding: 0px" ><a href="" ng-click="selectTab(3)">Contatos</a></li>
+                <li id="4" class="registerListTabs col-md-1 col-sm-1" style="padding: 0px" ><a href="" ng-click="selectTab(4)">Trabalho</a></li>
             </ul>
         </div>
         <div class="panel panel-primary col-md-12 col-sm-12">
