Updating the register client screen
- Changing form fields
- Refactor cep search to not use JQuery

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,16 +14,16 @@
     rel="stylesheet">
 <link href="styles/styles.css" rel="stylesheet">
 
-<!-- Dependencias angular -->
+<!-- Angular Dependencies -->
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-route/angular-route.min.js"></script>
 
-<!-- Outras dependencias -->
+<!-- Other Dependencies -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src='bower_components/ngMask/dist/ngMask.min.js'></script>
 
-<!-- Módulos -->
+<!-- Modules -->
 <script src="app.js"></script>
 
 <!-- Controllers -->
