--- a/src/main/webapp/register/client/work.html
+++ b/src/main/webapp/register/client/work.html
@@ -1,23 +1,27 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<form name="formTrab">
+<form name="formWork">
     <div class="row">
         <div class="form-group col-md-4 col-sm-4">
-            <label for="inputEmpresa">Nome da Empresa</label>
-            <input id="inputEmpresa" name="inputEmpresa" class="form-control" type="text" maxlength="2"/>
+            <label for="inputCompanyName">Nome da Empresa</label>
+            <input id="inputCompanyName" name="inputCompanyName" class="form-control" type="text"/>
         </div>
         <div class="form-group col-md-2 col-sm-=4">
-            <label for="inputTempo">Tempo Trabalhado</label>
-            <input id="inputTempo" name="inputTempo" class="form-control" type="text" maxlength="9"/>
+            <label for="inputTimeWorking">Tempo Trabalhado</label>
+            <input id="inputTimeWorking" name="inputTimeWorking" class="form-control" type="text"/>
         </div>  
         <div class="form-group col-md-2 col-sm-4">
             <label for="inputRenda">Renda Mensal</label>
-            <input id="inputRenda" name="inputRenda" class="form-control" type="text" maxlength="9"/>
+            <input id="inputRenda" name="inputRenda" class="form-control" type="text" placeholder="R$"/>
         </div>
     </div>  
     <div class="row">
         <div class="form-group col-md-4 col-sm-4">
             <label for="inputCargo">Cargo</label>
-            <input id="inputCargo" name="inputCargo" class="form-control" type="text" maxlength="2"/>
+            <input id="inputCargo" name="inputCargo" class="form-control" type="text"/>
+        </div>
+        <div class="form-group col-md-2 col-sm-2">
+            <label for="inputNumberOfBenefit">Número do Benefício</label>
+            <input id="inputNumberOfBenefit" name="inputNumberOfBenefit" class="form-control" type="text"/>
         </div>
     </div>
 </form>
