--- a/src/main/webapp/register/client/contacts.html
+++ b/src/main/webapp/register/client/contacts.html
@@ -1,27 +1,23 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <form name="formCont">
     <div class="row">
-        <div class="form-group col-md-1 col-sm-2">
-            <label for="inputDDD">DDD</label>
-            <input id="inputDDD" name="inputDDD" class="form-control" type="text" maxlength="2"/>
+        <div class="form-group col-md-3 col-sm-5">
+            <label for="inputEmail">Email</label>
+            <input id="inputEmail" name="inputHomeEmail" class="form-control" type="text" ng-model="contact[0].email"/>
         </div>
-        <div class="form-group col-md-2 col-sm-=5">
-            <label for="inputTelefone">Telefone Celular</label>
-            <input id="inputTelefone" name="inputTelefone" class="form-control" type="text" maxlength="9"/>
-        </div>  
-        <div class="form-group col-md-2 col-sm-5">
-            <label for="inputTelefone2">Telefone Residencial</label>
-            <input id="inputTelefone2" name="inputTelefone2" class="form-control" type="text" maxlength="9"/>
+	</div>
+    <div class="row">
+        <div class="form-group col-md-3 col-sm-=5">
+            <label for="inputHomePhoneNumber">Telefone Residencial</label>
+            <input id="inputHomePhoneNumber" name="inputHomePhoneNumber" class="form-control" type="text" ng-model="contact[0].phoneNumber" placeholder="(xx) xxxxx-xxxx" mask="(99) 99999-9999" clean="true" limit/>
+        </div>
+        <div class="form-group col-md-3 col-sm-=5">
+            <label for="inputCellPhoneNumber">Telefone Celular</label>
+            <input id="inputCellPhoneNumber" name="inputCellPhoneNumber" class="form-control" type="text" ng-model="contact[1].phoneNumber" placeholder="(xx) xxxxx-xxxx" mask="(99) 99999-9999" clean="true" limit/>
+        </div>
+        <div class="form-group col-md-3 col-sm-=5">
+            <label for="inputBusinessPhoneNumber">Telefone Comercial</label>
+            <input id="inputBusinessPhoneNumber" name="inputBusinessPhoneNumber" class="form-control" type="text" ng-model="contact[2].phoneNumber" placeholder="(xx) xxxxx-xxxx" mask="(99) 99999-9999" clean="true" limit/>
         </div>
     </div>  
-    <div class="row">
-        <div class="form-group col-md-2 col-sm-6">
-            <label for="inputTelefone3">Telefone Comercial</label>
-            <input id="inputTelefone3" name="inputTelefone3" class="form-control" type="text" />
-        </div>
-        <div class="form-group col-md-4 col-sm-6">
-            <label for="inputEmail">Email</label>
-            <input id="inputEmail" name="inputEmail" class="form-control" type="text" />
-        </div>
-    </div>
 </form>
